styling and modal start

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -53,8 +53,8 @@
                 <h3 class="title">
                   {{product.name}}
                 </h3>
-                <div class='content'>
-                  {{product.description | limitTo:410}}
+                <div class='tile-tweet'>
+                  {{product.description | limitTo:117}}
                 </div>
                 <a ng-href="{{product.website}}" class="website-link" target="_blank">
                   <i class="fa fa-external-link"></i>
