stripe and marketplace modal

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -38,7 +38,7 @@
         <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
           <br>
           <div ng-repeat="product in products | filter:filterProducts " class="product-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <a data-toggle="modal" data-target="#product_modal" >
+            <a class="tile" data-toggle="modal" data-target="#product_modal" >
               <div class="product">
                 <div class='rating'>
                   <span class='live'>
@@ -64,7 +64,7 @@
                   <i class="fa fa-plug"></i>
                 </a>
                 <a ng-hide="product.integrated" class="vote-count">
-                  <span style="color: #F2EFE6"><i class="fa fa-angle-double-up"></i></span> {{product.votes_count}}<span style="color: #F2EFE6"></span>
+                  <span style="color: #F2EFE6"><i class="fa fa-plug"></i>+ </span> {{product.votes_count}}<span style="color: #F2EFE6"></span>
                 </a>
                 <a ng-click="changeVoteFor(product)" class="vote-link" ng-show="!product.integrated">               
                   <i ng-class="{'fa ' : true, 'fa-chevron-down' : product.hasVoteForUser, 'fa-chevron-up' : !product.hasVoteForUser}"></i>
@@ -81,10 +81,10 @@
           <div class="featurette dark">
           <div class="modal-header">
              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-             <h4 class="modal-title" id="myModalLabel">More coming soon.</h4>
+             <h4 class="modal-title" id="myModalLabel">More soon...</h4>
           </div>
-          <div class="modal-body">              
-            A full details section—including features, tech specs, pricing, reviews, and case studies—is coming soon for this product.
+          <div class="modal-body">          
+            A full details section—including features, tech specs, pricing, reviews, and case studies—is coming soon.
             <br>
             <br>
             From the marketplace tile you can:
@@ -93,15 +93,12 @@
             <ul>
               <li>visit an app's <strong>homepage</strong> by clicking the <i class="fa fa-external-link"></i> icon,</li><br>
               <li>setup your <strong>credentials</strong> if the app is already integrated by clicking the <i class="fa fa-plug"></i> icon,</li><br>
-              <li>see how many votes the app has received <strong>for integration</strong> by checking the <i class="fa fa-angle-double-up"></i><span class="live">N</span> indicator,</li><br>
+              <li>see how many votes the app has received <strong>for integration</strong> by checking the <i class="fa fa-plug"></i>+<span class="live"> N</span> indicator,</li><br>
               <li>and <strong>vote</strong> for the app if you'd like to see it integrated by clicking the <i class="fa fa-chevron-up"></i> icon.</li>
             </ul>
             <br>
-            We'll prioritize development around only those apps which are most needed in the community.
+            We'll prioritize the development of new endpoint technologies according to the needs of the community.
           </div>
-            <div class="modal-footer">
-             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
           </div>
         </div>
       </div>
