--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -81,7 +81,7 @@
           <div class="featurette dark">
           <div class="modal-header">
              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-             <h4 class="modal-title" id="myModalLabel">More soon...</h4>
+             <h4 class="modal-title" id="myModalLabel">App details coming soon...</h4>
           </div>
           <div class="modal-body">          
             A full details section—including features, tech specs, pricing, reviews, and case studies—is coming soon.
