scrollbar back, show changes

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -20,7 +20,7 @@
         
         <div class="col-md-10 col-md-offset-1">
           <div class="search-field">
-              <input type:"text" class="form-control" placeholder="Start typing to search..." ng-model="searchText">
+              <input type:"text" class="form-control" class="form-control" placeholder="Start typing to search..." ng-model="searchText">
           </div>
         </div>
         
