activation link in user and signup link on pricing page

--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -50,8 +50,8 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-                  <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
-              </li>  
+                  <a href="/signup?plan=free" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
+              </li>
             </ul>
           </div>
 
@@ -85,7 +85,7 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-               <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
+               <a href="/signup?plan=Entry" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
               </li>
             </ul>
           </div>
@@ -120,7 +120,7 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-               <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-danger btn-lg">Sign up</a>
+               <a href="/signup?plan=Startup" ng-click="$event.stopPropagation()" class="btn btn-danger btn-lg">Sign up</a>
              </li>
          </ul>
      </div>
@@ -155,7 +155,7 @@
                 <strong><i class="fa fa-bolt"></i> rapid</strong> sync
             </li>
             <li class="plan-action">
-             <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
+             <a href="/signup?plan=Growth" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
          </li>
      </ul>
     </div>
@@ -190,7 +190,7 @@
               <strong><i class="fa fa-bolt"></i> rapid</strong> sync
           </li>
           <li class="plan-action">
-           <a href="/signup" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
+           <a href="/signup?plan=Enterprise" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
           </li>
         </ul>
       </div>
