big pricing updates without seed

--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -29,15 +29,6 @@
                   <strong>$0</strong> / mo.
               </li>
               <li>
-                  <strong>1</strong> project
-              </li>
-              <li>
-                  <strong>1</strong> user
-              </li>
-              <li>
-                  <strong>2</strong> apps
-              </li>
-              <li>
                   <strong>1</strong> map
               </li>
               <li>
@@ -64,22 +55,13 @@
                   <strong>$39</strong> / mo.
               </li>
               <li>
-                  <strong>1</strong> project
-              </li>
-              <li>
-                  <strong>1</strong> user
-              </li>
-              <li>
-                  <strong>2</strong> apps
-              </li>
-              <li>
                   <strong>3</strong> maps
               </li>
               <li>
                   <strong>limited</strong> support
               </li>
               <li>
-                  <strong>1000</strong> jobs/mo.
+                  <strong>1,000</strong> jobs/mo.
               </li>
               <li>
                 <strong>auto</strong> sync
@@ -99,22 +81,13 @@
                   <strong>$79</strong> / mo.
               </li>
               <li>
-                  <strong>2</strong> projects
-              </li>
-              <li>
-                  <strong>5</strong> users
-              </li>
-              <li>
-                  <strong>10</strong> apps
-              </li>
-              <li>
                   <strong>10</strong> maps
               </li>
               <li>
-                  <strong>email</strong> support
+                  <strong>limited</strong> support
               </li>
               <li>
-                  <strong>2000</strong> jobs/mo.
+                  <strong>5,000</strong> jobs/mo.
               </li>
               <li>
                 <strong>auto</strong> sync
@@ -134,22 +107,13 @@
                 <strong>$299</strong> / mo.
             </li>
             <li>
-                <strong>5</strong> projects
-            </li>
-            <li>
-                <strong>20</strong> users
-            </li>
-            <li>
-                <strong>20</strong> apps
-            </li>
-            <li>
                 <strong>20</strong> maps
             </li>
             <li>
-                <strong>priority</strong> support
+                <strong>email</strong> support
             </li>
             <li>
-                <strong>5000</strong> jobs/mo.
+                <strong>25,000</strong> jobs/mo.
             </li>
             <li>
                 <strong><i class="fa fa-bolt"></i> rapid</strong> sync
@@ -165,23 +129,17 @@
           <li class="plan-name">
               Enterprise
           </li>
-          <li class="plan-price">
-              <strong>$999</strong> / mo.
+          <li class="plan-name2">
+              <strong>project</strong> management
           </li>
           <li>
-              <strong>20</strong> projects
+              <strong>users</strong> &amp; roles
           </li>
           <li>
-              <strong>80</strong> users
+              <strong>unlimited</strong> maps
           </li>
           <li>
-              <strong>unlimited</strong> apps
-          </li>
-          <li>
-              <strong>80</strong> maps
-          </li>
-          <li>
-              <strong>live chat</strong> support
+              <strong>priority</strong> support
           </li>
           <li>
               <strong>unlimited</strong> jobs/mo.
@@ -190,12 +148,12 @@
               <strong><i class="fa fa-bolt"></i> rapid</strong> sync
           </li>
           <li class="plan-action">
-           <a href="/signup?plan=Enterprise" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
+           <a href="mailto:admin@openfn.org" class="btn btn-success btn-lg">Contact</a>
           </li>
         </ul>
       </div>
 
       </div>
       <div class="col-lg-12 col-lg-offset-0">
-        <h3>*contact us for custom plans</h3>
+        <h4>*Please <a href="mailto:admin@openfn.org">contact</a> us if you've got needs that don't seem to be covered here.</h4>
       </div>
