--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -21,8 +21,8 @@
 
         <div class="row flat">
           <div class="col-lg-12 col-lg-offset-0">
-            <h3>open[fn] is a non-profit organization and we hope to soon have 501(c)3 approval. Grants and donations subsidize the costs of the platform heavily, but those costs are significant and the time and money saved by organizations using the platform is tremendous.</h3>
-            <h3>Open-sourcing our code forces us to offer everything at below the "do-it-yourself" cost. If you can host the platform for less, you're free to use everything we've built on your own servers. Any changes or improvements that another organization makes to the code must be shared back to the entire community under the GPL* license.</h3>
+            <h4>open[fn] is a non-profit organization and we hope to soon have 501(c)3 approval. Grants and donations subsidize the costs of the platform heavily, but those costs are significant and the time and money saved by organizations using the platform is tremendous.</h4>
+            <h4>Open-sourcing our code forces us to offer everything at below the <em>do-it-yourself</em> cost. If you can host the platform for less, you're free to use everything we've built on your own servers. Any changes or improvements that are made to the code must be shared back to the entire community under the <u><a href="https://www.gnu.org/licenses/quick-guide-gplv3.html" target="_blank">GPLv3</a></u> license.</h4>
             </br>
             </br>
           </div>
@@ -161,5 +161,5 @@
 
       </div>
       <div class="col-lg-12 col-lg-offset-0">
-        <h4>*Read more about GPL open-source licensing <u><a href="https://www.gnu.org/licenses/quick-guide-gplv3.html">here</a></u>, and please <u><a href="mailto:admin@openfn.org">contact</a></u> us if you have needs that don't seem to be covered above.</h4>
+        <h4>Please <u><a href="mailto:admin@openfn.org">contact</a></u> us if none of the above plans fit your needs.</h4>
       </div>
