hide pricing from current_user and edit pricing page Free

--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -41,7 +41,7 @@
                 <strong>auto</strong> sync
               </li>
               <li class="plan-action">
-                  <a href="/signup?plan=free" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
+                  <a href="/signup?plan=Free" ng-click="$event.stopPropagation()" class="btn btn-success btn-lg">Sign up</a>
               </li>
             </ul>
           </div>
