ankur fix, pricing change

--- a/public/the_bridge_templates/static/maintenance.html
+++ b/public/the_bridge_templates/static/maintenance.html
@@ -4,7 +4,7 @@
 <header class="header-image">
   <div class="headline">
     <h1>
-      <i class="fa fa-credit-card"></i> tiered <strong>Pricing</strong>
+      <i class="fa fa-wrench"></i> a bit of<strong>Maintenance</strong>
     </h1>
     <h3>
       Unlock the <strong>potential</strong> of your current technologies.
