--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -32,8 +32,8 @@
 
       <div class="col-xs-6 col-sm-2">
         <div class="headline numbers">
-          <h3>6</h3>
-          <h4>ORGANIZATIONS</h4>
+          <h3>{{orgCount}}</h3>
+          <h4>USERS</h4>
         </div>
       </div>
     </div>
